--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
       content="Self Developed personal website build with React.js"
     />
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://soumyajit.vercel.app" />
+    <meta
+      property="og:url"
+      content="https://portfolio-ten-alpha-17.vercel.app"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="OG | Portfolio" />
     <meta
@@ -31,7 +34,7 @@
       content="Self Developed personal website build with React.js"
     />
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="../src/Assets/home-bg.jpg" />
     <meta name="twitter:title" content="OG | Portfolio" />
     <meta
       name="twitter:description"
